--- a/package.json
+++ b/package.json
@@ -73,7 +73,8 @@
     "test:e2e:integration": "npx cypress run -e TAGS='not @smoke'",
     "test:e2e:smoke": "npx cypress run -e TAGS='@smoke'",
     "eject": "react-scripts eject",
-    "codegen": "graphql-codegen --config codegen.yml"
+    "codegen": "graphql-codegen --config codegen.yml",
+    "deploy": "docker build ."
   },
   "eslintConfig": {
     "extends": [
