refactor: useReactiveVars hooks and generated typeDefs

--- a/codegen.yml
+++ b/codegen.yml
@@ -1,12 +1,13 @@
 overwrite: true
-schema: "/Users/tim.fisher/Documents/Code/githubsearch/schema.docs.graphql"
-documents: "src/queries.ts"
+schema: "./schema.docs.graphql"
+documents: "src/apollo/queries.ts"
 generates:
   src/generated/graphql.tsx:
     plugins:
       - "typescript"
       - "typescript-operations"
       - "typescript-react-apollo"
+      - "typescript-typedefs.js"
   ./graphql.schema.json:
     plugins:
       - "introspection"
