--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,4 +2,7 @@
     "editor.codeActionsOnSave": {
         "source.fixAll": true
     },
+    "eslint.validate": ["javascript", "javascriptreact", "typescript", "typescriptreact", "graphql"],  
+    "vscode-graphql.useSchemaFileDefinitions": true,
+    "editor.formatOnSave": true,
 }
