--- a/cypress/tsconfig.json
+++ b/cypress/tsconfig.json
@@ -2,7 +2,10 @@
     "compilerOptions": {
       "target": "es5",
       "lib": ["es5", "dom"],
-      "types": ["cypress", "@testing-library/cypress"]
+      "types": ["cypress", "@testing-library/cypress"],
+      "jsx": "react-jsx",
+      "resolveJsonModule": true,
+      "esModuleInterop": true
     },
     "include": [
       "**/*.ts"
