--- a/package.json
+++ b/package.json
@@ -49,7 +49,7 @@
     "@types/sanitize-html": "^2.3.1",
     "@types/styled-components": "^5.1.9",
     "@typescript-eslint/parser": "^4.25.0",
-    "cypress": "^7.7.0",
+    "cypress": "^8.2.0",
     "cypress-cucumber-preprocessor": "^4.0.0",
     "eslint": "^7.30.0",
     "eslint-config-airbnb": "^18.2.1",
@@ -67,7 +67,7 @@
     "typescript": "^4.3.2"
   },
   "scripts": {
-    "start": "react-scripts -r @cypress/instrument-cra start",
+    "start": "yarn codegen && react-scripts -r @cypress/instrument-cra start",
     "build": "react-scripts build",
     "lint": "eslint .  --ext .js,.jsx,.tsx",
     "lint:fix": "eslint .  --ext .js,.jsx,.tsx --fix",
@@ -77,7 +77,8 @@
     "test:e2e:integration": "npx cypress run -e TAGS='not @smoke'",
     "test:e2e:smoke": "npx cypress run -e TAGS='@smoke'",
     "eject": "react-scripts eject",
-    "codegen": "graphql-codegen --config codegen.yml",
+    "download-schema": "npx apollo service:download --header='Authorization: Bearer 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' --endpoint=https://api.github.com/graphql  graphql.schema.json",
+    "codegen": "yarn download-schema && graphql-codegen --config codegen.yml",
     "deploy": "docker build ."
   },
   "eslintConfig": {
