--- a/package.json
+++ b/package.json
@@ -67,7 +67,7 @@
     "typescript": "^4.3.2"
   },
   "scripts": {
-    "start": "yarn codegen && react-scripts -r @cypress/instrument-cra start",
+    "start": "react-scripts -r @cypress/instrument-cra start",
     "build": "react-scripts build",
     "lint": "eslint .  --ext .js,.jsx,.tsx",
     "lint:fix": "eslint .  --ext .js,.jsx,.tsx --fix",
